<resources>
    <string name="app_name">Библиотека</string>
    <string name="menu_home">Главная</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_library">Библиотека</string>
    <string name="menu_events">События</string>
    <string name="reg_details">Для получения читательского билета НДБ им. С.Я. Маршака, вам необходимо пройти процедуру регистрации.</string>
    <string name="clarification">Уточнение:</string>
    <string name="date_day">17</string>
    <string name="day_of_the_week">Четверг</string>
    <string name="month_year">Февраль 2022</string>
    <string name="profile_image">Изображение профиля</string>
    <string name="search">Поиск</string>
    <string name="events">События</string>
    <string name="authorization">Авторизация</string>
    <string name="login_email">Логин/электронная почта</string>
    <string name="password">Пароль</string>
    <string name="apply">Подтвердить</string>
    <string name="books_on_hands">Книги на руках</string>
    <string name="help">Помощь</string>
    <string name="library">Библиотека</string>
    <string name="app_help">Помощь по приложению</string>
    <string name="registration">Регистрация</string>
    <string name="settings">Настройки</string>
    <string name="statistics">Статистика</string>
    <string name="new_books">Новые книги</string>
    <string name="gender">Пол</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="phone_number">Номер телефона</string>
    <string name="phone">Телефон</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="year_of_birth">Год рождения</string>
    <string name="reg_address">Адрес регистрации</string>
    <string name="email">Электронная почта</string>
    <string name="reserved_books">Забронированные книги</string>
    <string name="search_results">Результаты поиска</string>
    <string name="clear_app_settings">Очистить данные приложения</string>
    <string name="wishlist">Список желаемого</string>
    <string name="user_profile">Профиль пользователя</string>
    <string name="guest">Гость</string>
    <string name="watch_all"><![CDATA[Смотреть все >]]></string>
    <string name="image_of_book_on_hands">Картинка книги на руках</string>
    <string name="reserved">Забронированные</string>
    <string name="image_of_reserved_book">Картинка забронированной книги</string>
    <string name="image_of_book_from_wishlist">Картинка книги из списка желаемого</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="new_books_short">Новинки</string>
    <string name="book_name">Название книги</string>
    <string name="app_executions">Входов в приложение:</string>
    <string name="all_added_books_to_wishlist">Всего добавлено книг в список желаемого:</string>
    <string name="all_reserved_books">Всего забронированно книг:</string>
    <string name="all_books_on_hands_of_all_time">Всего было взято книг на рук:</string>
    <string name="author_name">Имя автора</string>
    <string name="theme">Тема</string>
    <string name="find_book">Найти книгу!</string>
    <string name="personal_data_processing">Я согласен(на) на обработку персональных данных\nСогласие</string>
    <string name="profile">Профиль</string>
    <string name="this_is_profile">Здесь находится профиль</string>
    <string name="Enter_profile">Войти в профиль</string>
    <string name="already_in_profile">Вы уже в профиле</string>
    <string name="title_example">Ходячий замок</string>
    <string name="author_example">Джордж Сэмюэль Клейсон</string>
    <string name="book_title">Название книги</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="hint_cyrillic_names">С заглавной, русскими буквами</string>
    <string name="date_hint">Нажмите на поле сверху для выбора даты</string>
    <string name="phone_hint">Номер телефона, начинающийся с +7</string>
    <string name="email_hint">example@mail.domain</string>
    <string name="no_connection">Нет интернет соединения</string>
    <string name="check_connection">Проверить соединение</string>
    <string name="user_logged">false</string>
    <string name="authorized">Вы авторизованы, как:\n</string>
    <string name="add_to_wishlist">Добавить в список желаемого</string>
    <string name="remove_from_wishlist">Убрать из списка желаемого</string>
    <string name="to_book">Забронировать</string>
    <string name="to_unbook">Снять бронь</string>
    <string name="all_regs">Всего регистраций в приложении:</string>
    <string name="all_auths">Всего авторизаций в приложении:</string>
    <string name="fio_stats">ФИО:</string>
    <string name="login_stats">Логин:</string>
    <string name="email_stats">Email:</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="calendar_shown">Отображено V</string>
    <string name="calendar_hidden">Скрыто ^</string>
    <string name="no_on_hands">В настоящее время нет ни одной книги на руках</string>
    <string name="no_booked">В настоящее время ни одной книги не забронировано</string>
    <string name="no_wishlist_books">В настоящее время нет ни одной книги в списке желаемого</string>
    <string name="close_on_back_alert">Нажмите ещё раз, чтобы закрыть приложение</string>
    <string name="header">Заголовок</string>
    <string name="calendar_of_events">Календарь событий</string>
    <string name="list_of_events">Список событий</string>
    <string name="no_events_today">На этот день нет событий</string>
</resources>