<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/top_header_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginHorizontal="20dp"
    >

    <TextView
        android:id="@+id/date_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_serif_bold"
        android:text="@string/date_day"
        android:textColor="@color/santas_gray"
        android:textSize="38sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:layout_marginTop="9dp"
        >

        <TextView
            android:id="@+id/day_of_the_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/pt_serif_bold"
            android:text="@string/day_of_the_week"
            android:textColor="@color/date_secondary"
            android:textSize="12sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/month_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/pt_serif_bold"
            android:text="@string/month_year"
            android:textColor="@color/date_secondary"
            android:textSize="13sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile"
                    android:layout_gravity="center"
                    />

                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:background="@drawable/border_profile"
                    android:scaleType="centerCrop"
                    android:tooltipText="@string/this_is_profile"
                    android:contentDescription="@string/profile_image" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout> <!-- top header-->