<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    android:gravity="top"
    android:showDividers="middle"
    android:divider="@drawable/vertical_divider_15"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textColor="@color/woodsmoke"
            android:textSize="30sp"
            android:fontFamily="@font/pt_serif_bold"
            android:gravity="bottom"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:showDividers="middle"
        android:divider="@drawable/vertical_divider_10"
        android:background="@color/white"
        android:paddingVertical="10dp"
        >
        <android.widget.Button
            android:id="@+id/help_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/app_help"
            android:textSize="20sp"
            android:background="@color/mercury"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            />
        <android.widget.Button
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/registration"
            android:textSize="20sp"
            android:background="@color/mercury"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            />
        <android.widget.Button
            android:id="@+id/authorization_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/authorization"
            android:textSize="20sp"
            android:background="@color/mercury"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            />
        <android.widget.Button
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/settings"
            android:textSize="20sp"
            android:background="@color/mercury"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            />
        <android.widget.Button
            android:id="@+id/statistics_button"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/statistics"
            android:textSize="20sp"
            android:background="@color/mercury"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:gravity="start|center_vertical"
            />

    </LinearLayout>
</LinearLayout>