<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    android:gravity="top"
    android:showDividers="middle"
    android:divider="@drawable/empty_divider"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/woodsmoke"
            android:textSize="30sp"
            android:fontFamily="@font/pt_serif_bold"
            android:gravity="bottom"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:showDividers="middle"
        android:divider="@drawable/empty_divider"
        android:background="@color/white"
        android:paddingVertical="10dp"

        >
        <EditText
            android:id="@+id/book_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_search_edit_text"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/book_name"
            android:textColorHint="@color/tuna"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="book name"
            android:inputType="text" />
        <EditText
            android:id="@+id/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_search_edit_text"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/author_name"
            android:textColorHint="@color/tuna"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            android:autofillHints="name"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_search_edit_text"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:hint="@string/theme"
            android:textColorHint="@color/tuna"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck"
            android:importantForAutofill="no"
            android:inputType="text" />
        <android.widget.Button
            android:id="@+id/find_book"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/find_book"
            android:textSize="20sp"
            android:background="@drawable/ic_search_button"
            android:paddingHorizontal="10dp"
            />
    </LinearLayout>
</LinearLayout>