<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mercury"
    android:gravity="top"
    android:showDividers="middle"
    android:divider="@drawable/vertical_divider_15"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/woodsmoke"
            android:textSize="30sp"
            android:fontFamily="@font/pt_serif_bold"
            android:gravity="bottom"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:showDividers="middle"
        android:divider="@drawable/vertical_divider_15"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme" />

        <android.widget.Button
            android:id="@+id/clear_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"
            android:text="@string/clear_app_settings"
            android:textSize="20sp"
            android:background="@drawable/ic_search_button"
            android:paddingHorizontal="10dp"
            />

    </LinearLayout>




</LinearLayout>